Update Demonstration.ipynb (bugfix in Pkg activation)

--- a/Demonstration.ipynb
+++ b/Demonstration.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Pkg; Pkg.activate();\n",
+    "using Pkg; Pkg.activate("./");\n",
     "\n",
     "using CSV\n",
     "using DataFrames\n",
